2006-08-25  Mike Cvet  <mcvet@redhat.com>

	* test/TestWindowFactorization.java: Added - testing large-scale creation of 
	factory-generated windows.

2006-08-24  Phil Muldoon  <pmuldoon@redhat.com>

	* sessions/DebugProcess.java: Remove debug output.

2006-08-24  Mike Cvet  <mcvet@redhat.com>

	* memory/MemoryWindowFactory.java (createMemoryWindow): Re-arranged everything
	to avoid blocker race-conditions and to properly distinguish between initializations
	from the Monitor or SourceWindow.
	(finishMemWin): Get rid of some redundant LifeCycles.
	(setMemWin): Fixed a bug which resulted in this window being created twice by the 
	SourceWindow.
	(setMonitor): Added - Called when this Factory is used by the Monitor.
	(unblockTask): Windows can be hidden rather than destroyed, and thus not unblock the
	blocked Task. Prevent a window which was just hidden from repetively trying to unblock.
	Fixes #3120. Also allow window to be hidden properly from the Monitor.
	* register/RegisterWindowFactory.java (createRegisterWindow): Ditto.
	(finishRegWin): Ditto.
	(setRegWin): Ditto.
	(setMonitor): Ditto.
	(unblockTask): Ditto.

2006-08-23    <swagiaal@redhat.com>

	* sessions/DebugProcess.java: Added TaskTerminatedObserver to catch
	exiting for procs.

2006-08-23  Mike Cvet  <mcvet@redhat.com>

	* memory/MemoryWindowFactory.java (MemWinListener.lifeCycleQuery):
	Fixed a MainWindow show oops negation.
	(createMemoryWindow): Commented out some suspect code creating two
	MemoryWindows.
	* register/RegisterWindowFactory.java (createRegisterWindow): Ditto.

2006-08-23  Phil Muldoon  <pmuldoon@redhat.com>

	* glade/procpop.glade: Added Credits text.

2006-08-23    <swagiaal@redhat.com>

	* sessions/DebugProcess.java: Removed print statements.

2006-08-23  Mike Cvet  <mcvet@redhat.com>

	* SessionManagerGui.java (openSession): Added - opens the new Session correctly in the
	MainWindow. Closes #3114.
	(getSessionManagementControls): Now calls openSession to open the new Session.